--- a/clubs/templates/load_club.html
+++ b/clubs/templates/load_club.html
@@ -15,72 +15,98 @@
 </head>
 
 <body>
-  <div class="header">
-    <nav id="navbar">
-      <img src="../../static/images/logo3.png" class="logo">
-      <ul id="menu">
-        <li><a href='{% url 'log_out' %}' style="text-decoration: none">LOG OUT</a></li>
-        <li></li>
-        <li></li>
-        <li>COMPETITION</li>
-        <li>CLUBS</li>
-        <li>APPLICATION</li>
-        <li><a href='{% url 'applicant_list' %}' style="text-decoration: none">Applicants</a></li>
-        <li><a href='{% url 'members_and_officers_for_clubowner' %}' style="text-decoration: none">Club Users</a></li>
-        <li><a href='{% url 'profile' %}' style="text-decoration: none">MY PROFILE</a></li>
-        <li><a  <label for="clubs">Club:</label>
+  <header>
 
-          <select>
-          <option
-          {%if user.club == 'Kerbal'%}
-           value="Kerbal">Kerbal
-         {% endif %}</option>
-          <option
-          {%if user.club == 'Apollo'%}
-           value="Apollo">Apollo
-         {% endif %}</option>
-          <option
-          {%if user.club == 'Mercury'%}
-           value="Mercury">Mercury
-         {% endif %}</option>
-          <option
-          {%if user.club == 'Soyuz'%}
-           value="Soyuz">Soyuz
-         {% endif %}
-        </option>
-        </select>
-<button type="button" onclick="location.href='{% url 'load_club' %}'">Pick Club</button>
-</a></li>
-      </ul>
-    </nav>
-  </div>
-  <p
-  {%if user.club == 'FC2'%}
-class="text">FC2 HOME PAGE
-  <p
-  {%elif user.club == 'INS'%}
-class="text">INS HOME PAGE
-  <p
-  {%elif user.club == 'SEG'%}
-  class="text">SEG HOME PAGE
-  <p
-  {%elif user.club == 'PEP'%}
-  class="text">PEP HOME PAGE
+    <a href='{% url 'home' %}' >
+      <img src="../../static/images/logoko.png" width="90" height="80" class="logo">
+    </a>
+
+    {% for contract in contracts %}
+    {%if contract.club.club_name == 'Kerbal Chess Club' %}
+    <ul>
+      <li><a href='{% url 'club_list' %}' style="text-decoration: none">CLUBS</a></li>
+      <li><a href='{% url 'profile' %}' style="text-decoration: none">MY PROFILE</a></li>
+    </ul>
+   {% endif %}
+   {% endfor %}
+   {%if user.user_type == 1 %}
+   <ul>
+     <li><a href='{% url 'club_list' %}' style="text-decoration: none">CLUBS</a></li>
+     <li><a href='{% url 'member_list' %}' style="text-decoration: none">MEMBERS</a></li>
+     <li><a href='{% url 'profile' %}' style="text-decoration: none">MY PROFILE</a></li>
+   </ul>
+    {% endif %}
+   {%if user.user_type == 2 %}
+    <ul>
+      <li><a href='{% url 'club_list' %}' style="text-decoration: none">CLUBS</a></li>
+      <li><a href='{% url 'applicant_list' %}' style="text-decoration: none">APPLICANTS</a></li>
+      <li><a href='{% url 'member_list_for_officer' %}' style="text-decoration: none">MY CLUBS</a></li>
+      <li><a href='{% url 'profile' %}' style="text-decoration: none">MY PROFILE</a></li>
+    </ul>
   {% endif %}
-  </p>
-  <script>
-    var navbar = document.getElementById("navbar");
-    var menu = document.getElementById("menu");
+  {%if contracts.role == 3  %}
+  {# {%if user.first_name == 'Billie' %} #}
+  <ul>
+    <li><a href='{% url 'club_list' %}' style="text-decoration: none">CLUBS</a></li>
+    <li><a href='{% url 'applicant_list' %}' style="text-decoration: none">APPLICANTS</a></li>
+    <li><a href='{% url 'members_and_officers_for_clubowner' %}' style="text-decoration: none">MY CLUBS</a></li>
+    <li><a href='{% url 'officers' %}' style="text-decoration: none">OWNERSHIP</a></li>
+    <li><a href='{% url 'profile' %}' style="text-decoration: none">MY PROFILE</a></li>
+  </ul>
+  {% endif %}
 
-    window.onscroll = function(){
-      if (window.pageYOffset >= menu.offsetTop){
-        navbar.classList.add("sticky");
-      } else {
-        navbar.classList.remove("sticky");
-      }
-    }
+
+
+    <a class="logout" href='{% url 'log_out' %}'><button>LOG OUT</button></a>
+  </header>
+
+  <section class="banner">
+    <div class="content">
+      <h2>Let's Play Together</h2>
+      <p>Create a club to play with others</p>
+      <br><br>
+      <a href='{% url 'create_club' %}' class="btn">Create Club</a>
+    </div>
+  </section>
+
+  <section class="about">
+    <div class="col-xs-12 col-lg-6 col-xl-8">
+    <h1>Feed</h1>
+    {% include 'partials/contracts_as_table.html' with contracts=contracts %}
+
+    <p>You are a {{ contract.selected_club }}</p>
+      </div>
+    {% for contract in contracts %}
+      {%if contract.user.id == user.id  %}
+          <p> Hello {{ contract.user.id }}</p>
+      {%endif%}
+    {% endfor %}
+    <p>Your ID is {{ user.id }}</p>
+    <p>Basic Chess Club Management System:The Chess Club Management System is a web application that enables the officers of the club to manage membership of the club. People interested in joining the club can apply to join using a
+      simple application form that asks for their name, email (ideally associated with a gravatar), a public bio, chess experience level, and a short personal statement. The form also requires the user to create a password. Applicants can log
+      into the application with their email and password to see or edit their personal information. Applicants become members if membership is approved by an officer. Members can access access a list of all the other members, their names, public
+      bio and gravatar, but no contact details, information about chess experience, or their personal statement. Officers have access to information about all members. Members can be promoted to officer and officers can be demoted to member by the
+      club owner. There is one and only one club owner who can transfer ownership to another officer.</p>
+    <p>Advanced Chess Club Management System: In this variant of the Chess Club Management System, some features of the Basic Chess Club Management System are changed. Instead of supporting a single unnamed Chess Club, the system
+      provides administrative support for multiple Chess Clubs, each with their own owner, officers and members. Each club has its own name, location, and description/mission statement. This information is available to all users of the system, as
+      well as relevant statistics (initially just the number of members), and the name, gravatar and public bio of the owner. Users of the system can apply for membership of multiple clubs. Users can be a member of multiple clubs, in a variety of
+      roles.
+      For example, a user can be a member of one club, an officer in another, and owner of a third. Any user in the system can create their own chess club. The application enables users to switch between clubs they are a member/officer/owner of
+      using a combobox-like widget in the applications navbar or menu.</p>
+    <p>Tournaments:The Chess Club Management System supports the organisation of tournaments within clubs. A tournament can be organised by any officer. Tournaments will have a name and a short description. All members of the club
+      are allowed to participate in the tournament, except for the organising officer, up to a maximum number of players (the tournament capacity). Ideally, an organiser can assign other officers as a co-organisers of the tournament. The tournament
+      capacity should be at least 2 and no more than 96 (you can set tighter limits to make the application a bit simplier). To participate, club members need to sign up for the tournament by a deadline set by the tournament organiser. Until that
+      deadline, they can also withdraw from the tournament.</p>
+  </section>
+
+
+  <script type="text/javascript">
+    window.addEventListener("scroll", function() {
+      var header = document.querySelector("header");
+      header.classList.toggle("sticky", window.scrollY > 0);
+    })
   </script>
-</body>
 
+</body>
 </html>
 {% endblock %}
