--- a/clubs/templates/home.html
+++ b/clubs/templates/home.html
@@ -12,12 +12,13 @@
 
 <body>
   <header>
-    <a href='{% url 'home' %}' >
+
+   <a href='{% url 'home' %}' >
      <img src="../../static/images/logoko.png" width="90" height="80" class="logo">
    </a>
-   <form method="POST">
+   <form id="clubSelection" method ="GET">
      {% csrf_token %}
-    <select name='selected_club' >
+    <select name='selected_club' id="selected_club">
       <option disabled='true' selected>-- Choose Club --</option>
     {% for contract in contracts %}
       <option value = {{contract.club.club_name}} >{{ contract.club.club_name }}</option>
@@ -27,23 +28,41 @@
     {% endfor %}
     </select>
     <input type="submit" value="Pick Club"/>
-    {% if messages %}
-    {% for message in messages %}
-    <h3> {{message}} </h3>
-    {% endfor %}
-    {% endif %}
   </form>
 
-    <button type="button" onclick="location.href='{% url 'load_club' %}'">Pick Club</button>
-
     {% for contract in contracts %}
-    {%if contract.club.club_name == 'Kerbal Chess Club' %}
+    {%if contract.club.club_name == pls and contract.role == 0 %}
     <ul>
       <li><a href='{% url 'club_list' %}' style="text-decoration: none">CLUBS</a></li>
       <li><a href='{% url 'profile' %}' style="text-decoration: none">MY PROFILE</a></li>
     </ul>
    {% endif %}
-   {% endfor %}
+
+   {%if contract.club.club_name == pls and contract.role == 1 %}
+   <ul>
+     <li><a href='{% url 'club_list' %}' style="text-decoration: none">CLUBS</a></li>
+     <li><a href='{% url 'member_list' %}' style="text-decoration: none">MEMBERS</a></li>
+     <li><a href='{% url 'profile' %}' style="text-decoration: none">MY PROFILE</a></li>
+   </ul>
+    {% endif %}
+   {%if contract.club.club_name == pls and contract.role == 2 %}
+    <ul>
+      <li><a href='{% url 'club_list' %}' style="text-decoration: none">CLUBS</a></li>
+      <li><a href='{% url 'applicant_list' %}' style="text-decoration: none">APPLICANTS</a></li>
+      <li><a href='{% url 'member_list_for_officer' %}' style="text-decoration: none">MY CLUBS</a></li>
+      <li><a href='{% url 'profile' %}' style="text-decoration: none">MY PROFILE</a></li>
+    </ul>
+  {% endif %}
+  {%if contract.club.club_name == pls and contract.role == 3 %}
+  <ul>
+    <li><a href='{% url 'club_list' %}' style="text-decoration: none">CLUBS</a></li>
+    <li><a href='{% url 'applicant_list' %}' style="text-decoration: none">APPLICANTS</a></li>
+    <li><a href='{% url 'members_and_officers_for_clubowner' %}' style="text-decoration: none">MY CLUBS</a></li>
+    <li><a href='{% url 'officers' %}' style="text-decoration: none">OWNERSHIP</a></li>
+    <li><a href='{% url 'profile' %}' style="text-decoration: none">MY PROFILE</a></li>
+  </ul>
+  {% endif %}
+{% endfor %}
 
 
     <a class="logout" href='{% url 'log_out' %}'><button>LOG OUT</button></a>
@@ -59,15 +78,16 @@
   </section>
 
   <section class="about">
-    <p>You are a {{ contract.role }}</p>
+    <div class="col-xs-12 col-lg-6 col-xl-8">
+    <h1>Feed</h1>
+    {% include 'partials/contracts_as_table.html' with contracts=contracts %}
       </div>
-    {% for contract in contracts %}
-      {%if contract.user.id == user.id  %}
-          <p> Hello {{ contract.user.id }}</p>
-      {%endif%}
-    {% endfor %}
+
     <p>Your ID is {{ user.id }}</p>
-    <p>You are a {{ user.get_user_type_display }}</p>
+    {% if pls %}
+    <p>  {{ pls }} </p>
+    {% endif %}
+
     <p>Basic Chess Club Management System:The Chess Club Management System is a web application that enables the officers of the club to manage membership of the club. People interested in joining the club can apply to join using a
       simple application form that asks for their name, email (ideally associated with a gravatar), a public bio, chess experience level, and a short personal statement. The form also requires the user to create a password. Applicants can log
       into the application with their email and password to see or edit their personal information. Applicants become members if membership is approved by an officer. Members can access access a list of all the other members, their names, public
@@ -92,6 +112,11 @@
       header.classList.toggle("sticky", window.scrollY > 0);
     })
   </script>
+  <script type="text/javascript">
+    var selectedClub = document.getElementById("selected_club").value
+    document.getElementById("pick").innerHTML = document.getElementById("selected_club").value
+  </script>
+
 
 </body>
 </html>
