Make the logo of navbar be a backhome button

--- a/clubs/templates/base.html
+++ b/clubs/templates/base.html
@@ -16,7 +16,10 @@
 <body>
 
   <header>
-    <img class="logo" src="../../static/images/logoko.png" alt="logo" width="50" height="50">
+    <div class="logo-home-button">
+      <a href='{% url 'home' %}'><img class="logo" src="../../static/images/logoko.png" alt="logo" width="50" height="50">
+    </div>
+
     <nav>
       <ul class="nav_links">
         <li>
