add home button to navbar and remove the logout button

--- a/clubs/templates/base.html
+++ b/clubs/templates/base.html
@@ -20,6 +20,10 @@
       <a href='{% url 'home' %}'><img class="logo" src="../../static/images/logoko.png" alt="logo" width="50" height="50">
     </div>
 
+    <div class="backhome" href='{% url 'home' %}'>
+      <button3>HOME</button3>
+    </div>
+
     <nav>
       <ul class="nav_links">
         <li>
@@ -50,13 +54,8 @@
         <li><a href='{% url 'club_list' %}'>clubs</a></li>
 
         <li><a href='{% url 'profile' %}'>my profile</a></li>
-        <li><a href='{% url 'home' %}'>home</a></li>
       </ul>
     </nav>
-    &nbsp
-    <a class="logout" href='{% url 'log_out' %}'>
-      <button3>LOG OUT</button3>
-    </a>
   </header>
 
   {% block body %}
