--- a/clubs/templates/applicant_list.html
+++ b/clubs/templates/applicant_list.html
@@ -10,39 +10,38 @@
   <title>applicant</title>
 </head>
 
-<body>
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <br><br>
-        <br><br>
-        <h2>Applicants</h2>
-
-        <table class="table">
-          <th scope="col"> </th>
-          <th scope="col">Full Name</th>
-          <th scope="col">Profile</th>
-          <th scope="col">Rank</th>
-          <th scope="col">Approve/ Unapprove</th>
-          {% for user in applicants %}
-          <tr>
-            <td>
-              <img src="{{ user.mini_gravatar }}" alt="Gravatar of {{ user.email }}" class="rounded-circle">
-            </td>
-            <td>{{ user.full_name }}</td>
-            <td><a href="{% url 'show_user' user.id %}" class="btn">Show Profile</a></td>
-            <td>{{ user.get_user_type_display }}</td>
-            <td>
-              <a class="approve" href="{% url 'approve' user.id %}"><button>APPROVE</button></a>
-              <a class="unapprove" href="{% url 'unapprove' user.id %}" style="text-decoration: none">
-                <button1>UNAPPROVE</button1>
-              </a>
-            </td>
-          </tr>
-          {% endfor %}
-        </table>
-      </div>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <br><br><br><br>
+      <h2>Applicants</h2>
+      <table class="table">
+        <th scope="col"> </th>
+        <th scope="col">Full Name</th>
+        <th scope="col">Profile</th>
+        <th scope="col">Rank</th>
+        <th scope="col">Approve/ Unapprove</th>
+        {% for user in applicants %}
+        <tr>
+          <td>
+            <img src="{{ user.mini_gravatar }}" alt="Gravatar of {{ user.email }}" class="rounded-circle">
+          </td>
+          <td>{{ user.full_name }}</td>
+          <td><a href="{% url 'show_user' user.id %}" class="btn">Show Profile</a></td>
+          <td>{{ user.get_user_type_display }}</td>
+          <td>
+            <a class="approve" href="{% url 'approve' user.id %}">
+              <button>APPROVE</button>
+            </a>
+            <a class="unapprove" href="{% url 'unapprove' user.id %}" style="text-decoration: none">
+              <button1>UNAPPROVE</button1>
+            </a>
+          </td>
+        </tr>
+        {% endfor %}
+      </table>
     </div>
   </div>
+</div>
 </body>
 {% endblock %}
