--- a/clubs/templates/home.html
+++ b/clubs/templates/home.html
@@ -12,7 +12,9 @@
 
 <body>
   <header>
-    <img src="../../static/images/logoko.png" width="90" height="80" class="logo">
+    <a href='{% url 'home' %}' >
+         <img src="../../static/images/logoko.png" width="90" height="80" class="logo">
+       </a>
     <ul>
       <li><a href='{% url 'club_list' %}' style="text-decoration: none">CLUBS</a></li>
       <li><a href='' style="text-decoration: none">MY CLUBS</a></li>
