All tests refactored

--- a/clubs/templates/log_in.html
+++ b/clubs/templates/log_in.html
@@ -28,7 +28,7 @@
         <a>
           {% if messages %}
               {% for message in messages %}
-                  <p>{{ message }}</p>
+                  <p>{{ message }}</p> //all the messages are displayed even profile updated ones
               {% endfor %}
           {% else %}
           <p>&nbsp</p>
