Edit messages in each page, and labels on change password page

--- a/clubs/templates/password.html
+++ b/clubs/templates/password.html
@@ -9,6 +9,17 @@
       <form action="{% url 'password' %}" method="post">
         {% csrf_token %}
         {% include 'partials/bootstrap_form.html' with form=form %}
+        <div class="warning">
+          <p><font color="#AF444A" size="3" weight=500>
+            {% if messages %}
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            {% else %}
+            <p>&nbsp</p>
+            {% endif %}
+          </font></p>
+        </div>
         <input type="submit" value="Change password" class="btn btn-primary">
       </form>
     </div>
