--- a/clubs/templates/profile.html
+++ b/clubs/templates/profile.html
@@ -14,10 +14,22 @@
       <form action="{% url 'profile' %}" method="post">
         {% csrf_token %}
         {% include 'partials/bootstrap_form.html' with form=form %}
-        <br><br>
-        <input type="submit" value="Update" class="btn btn-primary">&nbsp<a class="btn btn-primary" href="{% url 'password' %}">
+        <div class="warning">
+          <p><font color="#AF444A" size="3" weight=500>
+            {% if messages %}
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            {% else %}
+            <p>&nbsp</p>
+            {% endif %}
+          </font></p>
+        </div>
+        <input type="submit" value="Update" class="btn btn-primary">
+        &nbsp<a class="btn btn-primary" href="{% url 'password' %}">
           <button1>Edit Password</button1>
         </a>
+
         <br><br>
       </form>
     </div>
