edit the hover of navbar clicked style

--- a/clubs/templates/base.html
+++ b/clubs/templates/base.html
@@ -17,7 +17,8 @@
 
   <header>
     <div class="logo-home-button">
-      <a href='{% url 'home' %}'><img class="logo" src="../../static/images/logoko.png" alt="logo" width="50" height="50">
+      <a href='{% url 'home' %}'><img class="logo" src="../../static/images/logoko.png" alt="logo" width="50" height="50"></a>
+      <br>HOME
     </div>
 
     <nav>
