--- a/clubs/templates/base.html
+++ b/clubs/templates/base.html
@@ -18,7 +18,7 @@
   <header>
     <div class="logo-home-button">
       <a href='{% url 'home' %}'><img class="logo" src="../../static/images/logoko.png" alt="logo" width="50" height="50"></a>
-      <br>HOME
+      <br><font color="#FFFFFF">HOME</font>
     </div>
 
     <nav>
