Edit the style of home button on navbar

--- a/clubs/templates/base.html
+++ b/clubs/templates/base.html
@@ -17,8 +17,7 @@
 
   <header>
     <div class="logo-home-button">
-      <a href='{% url 'home' %}'><img class="logo" src="../../static/images/logoko.png" alt="logo" width="50" height="50"></a>
-      <br><font color="#FFFFFF">HOME</font>
+      <a href='{% url 'home' %}'><img class="logo" src="../../static/images/logoko.png" alt="logo" width="50" height="50"><br>HOME</a>
     </div>
 
     <nav>
