Edit the homepage style

--- a/clubs/templates/homepage.html
+++ b/clubs/templates/homepage.html
@@ -13,15 +13,13 @@
 <body>
   <header>
     <img src="../../static/images/logoko.png" width="90" height="80" class="logo">
-
-    <a class="log_in" href='{% url 'log_in' %}'><button>LOG IN</button></a>
-
   </header>
 
   <section class="banner">
     <div class="content">
       <h2>Let's Play Together</h2>
-      <p>Create a club to play with others</p>
+      <br><br>
+      <a href='{% url 'log_in' %}' class="btn">LOG IN / SIGN UP</a>
     </div>
   </section>
 
