--- a/clubs/templates/profile.html
+++ b/clubs/templates/profile.html
@@ -9,27 +9,29 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <br><br><br><br>
+      <br><br><br>
+      <div class="warning">
+        <p>
+          <font color="#AF444A" size="3" weight=500>
+            {% if messages %}
+            {% for message in messages %}
+            <p>{{ message }}</p>
+            {% endfor %}
+            {% else %}
+            <p>&nbsp</p>
+            {% endif %}
+          </font>
+        </p>
+      </div>
       <h2>Edit profile</h2>
       <form action="{% url 'profile' %}" method="post">
         {% csrf_token %}
         {% include 'partials/bootstrap_form.html' with form=form %}
-        <div class="warning">
-          <p><font color="#AF444A" size="3" weight=500>
-            {% if messages %}
-                {% for message in messages %}
-                    <p>{{ message }}</p>
-                {% endfor %}
-            {% else %}
-            <p>&nbsp</p>
-            {% endif %}
-          </font></p>
-        </div>
+        <br>
         <input type="submit" value="Update" class="btn btn-primary">
         &nbsp<a class="btn btn-primary" href="{% url 'password' %}">
           <button1>Edit Password</button1>
         </a>
-
         <br><br>
       </form>
     </div>
