--- a/clubs/templates/user_list.html
+++ b/clubs/templates/user_list.html
@@ -13,6 +13,8 @@
       <br><br><br><br>
   {%if user.user_type == 3 %}
       <h2>Chess Club Members</h2>
+      <h6>member can be promoted to officer<h6>
+      <h6>officer can be demoted to member<h6>
       <table class="table">
         <th scope="col"> </th>
         <th scope="col">Full Name</th>
