--- a/clubs/templates/user_list.html
+++ b/clubs/templates/user_list.html
@@ -12,9 +12,7 @@
     <div class="col-12">
       <br><br><br><br>
   {%if user.user_type == 3 %}
-      <h2>Chess Club Members</h2>
-      <h6>member can be promoted to officer<h6>
-      <h6>officer can be demoted to member<h6>
+      <h2>Chess Club Members and Officers</h2>
       <table class="table">
         <th scope="col"> </th>
         <th scope="col">Full Name</th>
