Add a down arrow png

--- a/clubs/templates/dashboard.html
+++ b/clubs/templates/dashboard.html
@@ -58,6 +58,8 @@
       <p> Welcome, {{ user.full_name }}, You are a {{ user.get_user_type_display }} </p>
       <br><br>
       <p> Scroll down for more information <p>
+      <br>
+      <img src="../../static/images/Down Arrow.png" width="37" height="23" class="Down-Arrow">
     </div>
   </section>
 
