--- a/static/homepage.css
+++ b/static/homepage.css
@@ -91,7 +91,6 @@ p{
   font-size: 1.5em;
   color: #fff;
 }
-
 .btn{
   font-size: 1em;
   color: #fff;
@@ -107,10 +106,20 @@ p{
 .btn:hover{
   letter-spacing: 6px;
 }
-
+.banner .content h4{
+  font-size: 1.2em;
+  font-weight: 500;
+  color: #fff;
+}
 .about p{
   padding: 20px;
   color: white;
+  font-size: 1.5rem;
+}
+.about p span{
+  color: #C1A779;
+  font-weight: 700;
+  font-size: 1em;
 }
 
 header.sticky ul li a {
