--- a/static/homepage.css
+++ b/static/homepage.css
@@ -116,6 +116,14 @@ p{
   color: white;
   font-size: 1.5rem;
 }
+.about a{
+  color: #C4C4C4;
+  font-size: 1.5rem;
+}
+.about a:hover{
+  color: gray;
+  font-size: 1.5rem;
+}
 .about p span{
   color: #C1A779;
   font-weight: 700;
